cmake_minimum_required(VERSION 3.13)
project(recursion_examples)

set(CMAKE_C_STANDARD 99)

add_subdirectory(01_08)
add_subdirectory(09_pay)
add_subdirectory(10_12_partition)
add_subdirectory(13_partition_count)
add_subdirectory(14-15_gray_code)
add_subdirectory(16_m_sum)
add_subdirectory(17_m_sum)
add_subdirectory(18_choose)
add_subdirectory(19_linked_list)
add_subdirectory(20_binary_search)
add_subdirectory(21_merge_sort)
add_subdirectory(23_quicksort)
add_subdirectory(24_tower_of_hanoi)
add_subdirectory(25_27_tree_traversals)
add_subdirectory(28_percentage)
add_subdirectory(29_palindrome)
add_subdirectory(30_print_array)

add_executable(recursion_examples main.c)
